kubernetes/apps/datalakehouse/airflow/app/lan-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: airflow-lan
  annotations:
    lbipam.cilium.io/ips: 192.168.1.206
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  selector:
    component: api-server
    release: airflow
    tier: airflow
  ports:
  - name: http
    port: 80
    targetPort: 8080
