kubernetes/apps/datalakehouse/airflow/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: airflow
spec:
  hostnames:
  - airflow.timcasa.me
  parentRefs:
  - name: envoy-internal
    namespace: network
  rules:
  - backendRefs:
    - name: airflow-api-server
      port: 8080
